fix get all posts
